# skills-for-fabric-learning

./: .gitignore  README.en.md  README.md  deploy-mext-e2e.sh  pyproject.toml
config/: variables.md
context/: findings.md  loadMextData.md
data/: putfileshere.txt
notebooks/: LoadMextEducationData.ipynb  TranslateMextToEnglish.ipynb
