[project]
name = "skills-for-fabric-learning"
version = "1.0.0"
description = "End-to-end deployment of Japanese education content data into Microsoft Fabric"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/DataSnowman/skills-for-fabric-learning"
